--- a/css/style.css
+++ b/css/style.css
@@ -81,31 +81,7 @@
 
 .btn-dark,
 .btn-primary {
-  margin: 10px;
-}
-
-.btn-primary::before,
-.btn-primary::after {
-  position: absolute;
-  content: "";
-  width: calc(100% + 10px);
-  height: calc(100% + 10px);
-  top: -5px;
-  left: -5px;
-}
-
-.btn-primary::before {
-  top: -10px;
-  height: calc(100% + 20px);
-  border-left: 2px solid var(--bs-primary);
-  border-right: 2px solid var(--bs-primary);
-}
-
-.btn-primary::after {
-  left: -10px;
-  width: calc(100% + 20px);
-  border-top: 2px solid var(--bs-primary);
-  border-bottom: 2px solid var(--bs-primary);
+  margin: 8px;
 }
 
 .btn-dark::before,
@@ -143,16 +119,16 @@
   padding: 0;
   outline: none;
   font-family: "Playfair Display", serif;
-  font-size: 18px;
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: var(--bs-dark);
+  font-size: 1.4em;
+  font-weight: 550;
+  letter-spacing: 2px;
+  color: var(--bs-light);
 }
 
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
-  color: var(--bs-primary);
+  color: var(--bs-light);
+  border-bottom: 2px solid var(--bs-primary);
 }
 
 .navbar .dropdown-toggle::after {
@@ -173,6 +149,18 @@
 /** Logotipo **/
 .logo-new-era {
   width: 160px;
+}
+
+/** Vid Hero **/
+.hero-video {
+  overflow: hidden;
+  border-radius: 6px;
+}
+
+.hero-video video {
+  width: 100%;
+  height: 550px;
+  
 }
 
 @media (max-width: 991.98px) {
@@ -201,13 +189,10 @@
   }
 }
 
-.navbar .btn-primary {
-  border-width: 2px;
-  background: var(--bs-light);
-}
-
 .navbar .btn-primary:hover {
+  color: var(--bs-gray-dark);
   background: var(--bs-primary);
+  font-weight: 660;
 }
 
 /*** Hero Header ***/
@@ -276,7 +261,6 @@
   filter: brightness(0) saturate(100%);
 }
 
-
 /*** Service ***/
 @media (max-width: 768px) {
   .service .service-item {
@@ -285,7 +269,7 @@
   }
 
   .btn-mobile-center {
-    display: table; 
+    display: table;
     margin-left: auto;
     margin-right: auto;
   }
@@ -307,7 +291,6 @@
 
 .service .service-item .btn-primary {
   border-width: 2px;
-  background: var(--bs-white);
 }
 
 .service .service-item .btn-primary:hover {
